--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  background-image: url('/animated-background.gif');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: black;
-  color: black;
+@layer components {
+  .bg-gradient {
+    background-image: linear-gradient(to right top, #f7f800, #ff3ef6, #39a2f7, #00ff42);
+  }
 }
